# connect2mark-api

./: .env.sample  .gitignore  README.md  celery_worker.py  celerybeat-schedule  discussions  main.py  pyproject.toml  requirements.txt  secret.py  sqlite.db  sqlite.sample.db  sqlite_backup.db  todo
alembic/: env.py
alembic/versions/: 163f1c0beed7_initial_commit.py  24e7f6cfd4bc_initial_commit.py  325bf19caf5c_init_commit.py  3e63f1be2e9c_second_commit.py  3f724d72d00b_init_commit.py  448f2921420c_added_init_tables.py  4870457e8925_added_init_tables.py  59ae370437e6_initial_commit.py  88bc9d903428_initial_commit.py  8af706af4af5_added_users_table.py  a6e2ae3c4462_initial_commit.py
router/: users.py
routers/: jwt_tokens.py  temporary.py
routers/academic/: attendance.py  attendance_result.py  attendance_tracking.py  schedule_instances.py
routers/admin/: attendance_result.py  attendance_tracking.py  locations.py  schedule_instances.py  schedules.py  stats.py  users.py
routers/common/: me.py
routers/staff/: attendance.py  attendance_result.py  schedule_instances.py
sqlite/: crud.py  database.py  enums.py  models.py  schemas.py
sqlite/crud/: attendance.py  attendance_tracking.py  locations.py  schedule_instances.py  schedules.py  stats.py  users.py
utils/: auth.py  date_utils.py
